--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -9587,6 +9587,14 @@ acceptedBreaks:
       old: "class net.fortuna.ical4j.model.TemporalAdapter<T extends java.time.temporal.Temporal>"
       new: "class net.fortuna.ical4j.model.TemporalAdapter<T extends java.time.temporal.Temporal>"
       justification: "added_static_comparator_instance"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.Property::<init>(java.lang.String,\
+        \ java.lang.String)"
+      justification: "revert_signature_change_for_property"
+    - code: "java.method.removed"
+      old: "method void net.fortuna.ical4j.model.Property::<init>(java.lang.String,\
+        \ java.lang.String, net.fortuna.ical4j.model.ParameterList)"
+      justification: "revert_signature_change_for_property"
     - code: "java.method.returnTypeTypeParametersChanged"
       old: "method net.fortuna.ical4j.model.TemporalAdapter net.fortuna.ical4j.model.TemporalAdapter<T\
         \ extends java.time.temporal.Temporal>::from(net.fortuna.ical4j.model.Date)"
