--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -1992,6 +1992,9 @@ acceptedBreaks:
       justification: "jarkata_mail_package_changed"
   "3.2.6":
     org.mnode.ical4j:ical4j:
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.validate.PropertyValidator<T extends net.fortuna.ical4j.model.Property>.ATTACH"
+      justification: "minor_validation_refactoring"
     - code: "java.method.exception.checkedAdded"
       old: "method void net.fortuna.ical4j.model.property.Concept::<init>(net.fortuna.ical4j.model.ParameterList,\
         \ net.fortuna.ical4j.model.PropertyFactory)"
