--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,7 @@ dependencies {
             "org.apache.commons:commons-lang3:$commonsLangVersion",
             "org.apache.commons:commons-collections4:$commonsCollectionsVersion",
             "commons-validator:commons-validator:$commonsValidatorVersion",
-            "org.threeten:threeten-extra:$threetenExtraVersion",
-            "org.jooq:jool-java-8:$joolVersion"
+            "org.threeten:threeten-extra:$threetenExtraVersion"
 
     // optional timezone caching..
     implementation 'javax.cache:cache-api:1.1.1', optional
