--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jdk: [ '8', '11', '17', '18', '20' ]
+        jdk: [ '8', '11', '17', '19' ] # Gradle cannot support JDK 20 yet
 
     steps:
     - uses: actions/checkout@v3
