--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ commonsValidatorVersion = 1.7
 threetenExtraVersion = 1.7.0
 joolVersion = 0.9.14
 jparsecVersion = 3.1
-everitJsonSchemaVersion = 1.14.1
+jsonSkemaVersion = 0.6.0
 
 groovyVersion = 3.0.17
 bndVersion = 6.3.1
