--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,32 +25,32 @@ jobs:
         java-version: ${{ matrix.jdk }}
         cache: 'gradle'
 
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: check --console=plain --warning-mode all
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+
+    - name: Execute Gradle build
+      run: ./gradlew check --console=plain --warning-mode all
 
   publish:
     name: Publish Artifact
     needs: gradle
     if: ${{ needs.gradle.result == 'success' }}
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
 
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        distribution: temurin
-        java-version: 8
-        cache: 'gradle'
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
-    - uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: build -x test publish
-      env:
-        GPR_USERNAME: benfortuna
-        GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+      - name: Execute Gradle build
+        run: ./gradlew build -x test publish
+        env:
+          GPR_USERNAME: benfortuna
+          GPR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
