--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: "Run analysis"
-        uses: ossf/scorecard-action@v2
+      - name: OSSF Scorecard action
+        uses: ossf/scorecard-action@v2.1.3
         with:
           results_file: results.sarif
           results_format: sarif
