--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -2433,3 +2433,13 @@ acceptedBreaks:
         \ net.fortuna.ical4j.model.RelationshipPropertySupport::getRecurrenceId()\
         \ @ net.fortuna.ical4j.model.component.VToDo"
       justification: "improved_generics"
+  "4.0.0-beta8":
+    org.mnode.ical4j:ical4j:
+    - code: "java.field.removed"
+      old: "field net.fortuna.ical4j.model.property.ParticipantType.VOTER"
+      justification: "redundant_throws"
+    - code: "java.method.exception.checkedRemoved"
+      old: "method void net.fortuna.ical4j.model.property.StyledDescription::<init>(java.lang.String)\
+        \ throws java.net.URISyntaxException"
+      new: "method void net.fortuna.ical4j.model.property.StyledDescription::<init>(java.lang.String)"
+      justification: "redundant_throws"
