--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -2456,6 +2456,154 @@ acceptedBreaks:
       justification: "improved_generics"
   "4.0.0-beta8":
     org.mnode.ical4j:ical4j:
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.AddTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.AddTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.CancelTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.CancelTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.CounterTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.CounterTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.DeclineCounterTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.DeclineCounterTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.MethodUpdate"
+      new: "class net.fortuna.ical4j.transform.calendar.MethodUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.PublishTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.PublishTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.RefreshTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.RefreshTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.ReplyTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.ReplyTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.RequestTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.RequestTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.Rfc5545Transformer"
+      new: "class net.fortuna.ical4j.transform.calendar.Rfc5545Transformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.AbstractMethodTransfomer"
+      new: "class net.fortuna.ical4j.transform.component.AbstractMethodTransfomer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.AttendeeUpdate"
+      new: "class net.fortuna.ical4j.transform.component.AttendeeUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.ComponentDeclineCounterTransformer"
+      new: "class net.fortuna.ical4j.transform.component.ComponentDeclineCounterTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.ComponentRefreshTransformer"
+      new: "class net.fortuna.ical4j.transform.component.ComponentRefreshTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.OrganizerUpdate"
+      new: "class net.fortuna.ical4j.transform.component.OrganizerUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.SequenceIncrement"
+      new: "class net.fortuna.ical4j.transform.component.SequenceIncrement"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.UidUpdate"
+      new: "class net.fortuna.ical4j.transform.component.UidUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByDayRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByDayRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByHourRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByHourRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByMinuteRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByMinuteRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByMonthDayRule<T extends\
+        \ java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByMonthDayRule<T extends\
+        \ java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByMonthRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByMonthRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.BySecondRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.BySecondRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.BySetPosRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.BySetPosRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByWeekNoRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByWeekNoRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.noLongerImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.ByYearDayRule<T extends\
+        \ java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.ByYearDayRule<T extends\
+        \ java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer"
+      new: "class net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.MethodUpdate"
+      new: "class net.fortuna.ical4j.transform.calendar.MethodUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.calendar.Rfc5545Transformer"
+      new: "class net.fortuna.ical4j.transform.calendar.Rfc5545Transformer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.AbstractMethodTransfomer"
+      new: "class net.fortuna.ical4j.transform.component.AbstractMethodTransfomer"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.AttendeeUpdate"
+      new: "class net.fortuna.ical4j.transform.component.AttendeeUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.OrganizerUpdate"
+      new: "class net.fortuna.ical4j.transform.component.OrganizerUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.SequenceIncrement"
+      new: "class net.fortuna.ical4j.transform.component.SequenceIncrement"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.component.UidUpdate"
+      new: "class net.fortuna.ical4j.transform.component.UidUpdate"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.class.nowImplementsInterface"
+      old: "class net.fortuna.ical4j.transform.recurrence.BySetPosRule<T extends java.time.temporal.Temporal>"
+      new: "class net.fortuna.ical4j.transform.recurrence.BySetPosRule<T extends java.time.temporal.Temporal>"
+      justification: "added_support_for_functional_transforms"
     - code: "java.element.noLongerDeprecated"
       old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.util.Calendars::merge(net.fortuna.ical4j.model.Calendar,\
         \ net.fortuna.ical4j.model.Calendar)"
@@ -2673,6 +2821,9 @@ acceptedBreaks:
       new: "method <T extends net.fortuna.ical4j.model.PropertyContainer> T net.fortuna.ical4j.model.PropertyContainer::replace(net.fortuna.ical4j.model.Property)"
       justification: "improve_generics_for_method_chaining"
     - code: "java.method.addedToInterface"
+      new: "method R java.util.function.Function<T, R>::apply(T) @ net.fortuna.ical4j.transform.Transformer<T>"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.addedToInterface"
       new: "method T net.fortuna.ical4j.transform.Transformer<T>::apply(T)"
       justification: "added_support_for_functional_transforms"
     - code: "java.method.exception.checkedRemoved"
@@ -2845,6 +2996,90 @@ acceptedBreaks:
       old: "parameter net.fortuna.ical4j.model.component.CalendarComponent net.fortuna.ical4j.transform.component.SequenceIncrement::transform(===net.fortuna.ical4j.model.component.CalendarComponent===)"
       new: "parameter T net.fortuna.ical4j.transform.Transformer<T>::transform(===T===)\
         \ @ net.fortuna.ical4j.transform.component.SequenceIncrement"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByDayRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByHourRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByMinuteRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByMonthDayRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByMonthRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.BySecondRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.BySetPosRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByWeekNoRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method java.util.List<T> net.fortuna.ical4j.transform.recurrence.ByYearDayRule<T\
+        \ extends java.time.temporal.Temporal>::transform(java.util.List<T>)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.AbstractMethodTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.AddTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.CancelTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.CounterTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.DeclineCounterTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.MethodUpdate::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.PublishTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.RefreshTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.ReplyTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.RequestTransformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Calendar net.fortuna.ical4j.transform.calendar.Rfc5545Transformer::transform(net.fortuna.ical4j.model.Calendar)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.transform.component.AbstractMethodTransfomer::transform(net.fortuna.ical4j.model.Component)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.transform.component.AttendeeUpdate::transform(net.fortuna.ical4j.model.Component)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.transform.component.OrganizerUpdate::transform(net.fortuna.ical4j.model.Component)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.transform.component.UidUpdate::transform(net.fortuna.ical4j.model.Component)"
+      justification: "added_support_for_functional_transforms"
+    - code: "java.method.removed"
+      old: "method net.fortuna.ical4j.model.component.CalendarComponent net.fortuna.ical4j.transform.component.SequenceIncrement::transform(net.fortuna.ical4j.model.component.CalendarComponent)"
       justification: "added_support_for_functional_transforms"
     - code: "java.method.returnTypeTypeParametersChanged"
       old: "method net.fortuna.ical4j.model.ComponentContainer<T> net.fortuna.ical4j.model.ComponentContainer<T\
