--- a/.github/workflows/publish-snapshots.yml
+++ b/.github/workflows/publish-snapshots.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        jdk: [ '8', '11', '17', '19' ] # Gradle cannot support JDK 20 yet
+        jdk: [ '11', '17', '19' ] # Gradle cannot support JDK 20 yet
 
     steps:
     - uses: actions/checkout@v3
